# soul_of_fiona

./: CMakeLists.txt  copy_fw.sh  project.info  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/bsp_extra/: CMakeLists.txt  bsp_board_extra.c  idf_component.yml
components/car_data/: CMakeLists.txt  CarData.c  CarData.h
components/config_manager/: CMakeLists.txt  config_manager.c  config_manager.h
components/fiona_brain/: CMakeLists.txt  fiona_brain.c  fiona_brain.h
components/fiona_core/: CMakeLists.txt  fiona_animations.c  fiona_animations.h  fiona_background.c  fiona_core.c  fiona_core.h  fiona_observers.c
components/fiona_phrase_loader/: CMakeLists.txt  fiona_phrase_loader.c  fiona_phrase_loader.h
components/fiona_soul/: CMakeLists.txt  fiona_soul.c  fiona_soul.h
components/gui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_debug_helpers.c  ui_debug_helpers.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/gui/components/: ui_comp_hook.c
components/gui/fonts/: ui_font_BaseFont.c  ui_font_BaseFont16.c  ui_font_BaseFont20.c  ui_font_Digital.c  ui_font_LedSymbol.c  ui_font_SSaverFont.c
components/gui/images/: ui_img_1173513873.c  ui_img_1173515923.c  ui_img_1279366634.c  ui_img_akb_png.c  ui_img_battery_png.c  ui_img_black_png.c  ui_img_cooller1_png.c  ui_img_cooller1a_png.c  ui_img_cooller2_png.c  ui_img_cooller2a_png.c  ui_img_cooller3_png.c  ui_img_cyan_cat_png.c  ui_img_esp_png.c  ui_img_fuel_png.c  ui_img_green_cat_png.c  ui_img_grey_png.c  ui_img_h_l_png.c  ui_img_ofe_png.c  ui_img_oil_level_png.c  ui_img_red_cat_png.c  ui_img_red_png.c  ui_img_small_blue_png.c  ui_img_speed_png.c  ui_img_twater_png.c  ui_img_water_temp2_png.c  ui_img_water_temp_png.c  ui_img_yellow_cat_png.c
components/gui/screens/: ui_Screen_ClimateControl.c  ui_Screen_ClimateControl.h  ui_Screen_DashBoard.c  ui_Screen_DashBoard.h  ui_Screen_SplashScreen.c  ui_Screen_SplashScreen.h  ui_Screen_System.c  ui_Screen_System.h
components/sd_utils/: CMakeLists.txt  sd_utils.c  sd_utils.h
components/system_actions/: CMakeLists.txt  system_actions.c  system_actions.h
components/uart_protocol/: CMakeLists.txt  protocol.h  uart_protocol.c  uart_protocol.h  uart_rx_arduino.c  uart_rx_arduino.h  uart_rx_dashboard.c  uart_rx_dashboard.h  uart_rx_imu.c  uart_rx_imu.h  uart_rx_stats.c  (+3 more)
main/: CMakeLists.txt  main.c
(+1 files in other folders)
