idf_component_register(
    SRCS "screens/ui_Screen_DashBoard.c"
         "screens/ui_Screen_System.c"
         "screens/ui_Screen_ClimateControl.c"
         "screens/ui_Screen_SplashScreen.c"
         "ui.c"
         "components/ui_comp_hook.c"
         "ui_helpers.c"
         "ui_debug_helpers.c"
         "ui_events.c"
         "images/ui_img_bg_red_png.c"
         "images/ui_img_small_blue_png.c"
         "images/ui_img_speed_png.c"
         "images/ui_img_akb_png.c"
         "images/ui_img_battery_png.c"
         "images/ui_img_h_l_png.c"
         "images/ui_img_fuel_png.c"
         "images/ui_img_ofe_png.c"
         "images/ui_img_oil_level_png.c"
         "images/ui_img_twater_png.c"
         "images/ui_img_water_temp2_png.c"
         "images/ui_img_water_temp_png.c"
         "images/ui_img_esp_png.c"
         "images/ui_img_1173513873.c"
         "images/ui_img_1279366634.c"
         "images/ui_img_1173515923.c"
         "images/ui_img_cooller2_png.c"
         "images/ui_img_cooller1a_png.c"
         "images/ui_img_cooller1_png.c"
         "images/ui_img_cooller2a_png.c"
         "images/ui_img_cooller3_png.c"
         "images/ui_img_cyan_cat_png.c"
         "images/ui_img_green_cat_png.c"
         "images/ui_img_yellow_cat_png.c"
         "images/ui_img_red_cat_png.c"
         "images/ui_img_global_bg_png.c"
         "images/ui_img_black_png.c"
         "images/ui_img_grey_png.c"
         "images/ui_img_red_png.c"
         "images/ui_img_fordlogo_png.c"
         "fonts/ui_font_BaseFont.c"
         "fonts/ui_font_BaseFont16.c"
         "fonts/ui_font_BaseFont20.c"
         "fonts/ui_font_Digital.c"
         "fonts/ui_font_LedSymbol.c"
         "fonts/ui_font_SSaverFont.c"
    INCLUDE_DIRS "."
                 "screens"
                 "fonts"
    REQUIRES lvgl__lvgl car_data uart_protocol sd_utils fatfs fiona_core system_actions
)